[metadata]
name = Online-W3C-Validator
author = Radomirs Cirskis
author-email = nad2000@gmail.com
home-page = https://github.com/nad2000/W3C-Validator
project-urls =
    Source Code = https://github.com/nad2000/W3C-Validator
license = MIT
description-file = README.rst
description-content-type = text/x-rs; charset=UTF-8
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    html validator
    html
    validator
    checker
    html5
    w3

[files]
packages =
    w3c_validator

[entry_points]
console_scripts =
    w3c_validator = w3c_validator.validator:main
