[metadata]
name = Online-W3C-Validator
author = Radomirs Cirskis
author_email = nad2000@gmail.com
home_page = https://github.com/nad2000/W3C-Validator
project_urls =
    Source Code = https://github.com/nad2000/W3C-Validator
license = MIT
description_file = README.rst
description_content_type = text/x-rst; charset=UTF-8
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords =
    html validator
    html
    validator
    checker
    html5
    w3

[files]
packages =
    w3c_validator

[options.extras_require]
dev =
    coverage>=4.4.1
    coveralls>=1.2.0
    flake8>=3.4.1
    flake8-docstrings>=1.1.0
    flake8-polyfill>=1.0.1
    flask-debugtoolbar>=0.10.1
    isort>=4.2.15
    pep8-naming>=0.4.1
    pydocs>=0.2
    pydocstyle>=2.0.0,<4.0.0
    Pygments>=2.2.0
    pytest
    pytest-cov>=2.5.1
    pytest-mock
    testpath>=0.3.1
    yapf>=0.17.0
    twine
test =
    coverage>=4.4.1
    coveralls>=1.2.0
    flake8>=3.4.1
    flake8-docstrings>=1.1.0
    flake8-polyfill>=1.0.1
    pytest
    pytest-cov>=2.5.1
    pytest-mock
    testpath>=0.3.1

[entry_points]
console_scripts =
    w3c_validator = w3c_validator.validator:main
